--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ body {
   background-color: #fffcf7;
 }
 
+p {
+  font-size: 0.8rem;
+}
+
 button {
   font-family: 'Roboto Mono', monospace;
   color: #1f1f1f;
@@ -22,7 +26,7 @@ button:hover {
 
 .container {
   display: flex;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: auto;
   gap: 20px;
   font-family: 'Roboto Mono', monospace;
@@ -36,17 +40,27 @@ button:hover {
   
 }
 
+
 .profile {
   text-align: center;
   border: 2px solid #d6d0c2;
   padding: 20px;
   max-width: 230px;
-  max-height: 710px;
   background-color: #ffffff;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.25rem; 
 }
 
-.profile img {
+/* .profile img {
   width: 12rem;
+} */
+
+.profile-image {
+  width: 100%; 
+  height: auto;
 }
 
 .resume-button {
@@ -83,9 +97,13 @@ button:hover {
 /* EDUCATION */
 .education, .skills, .projects {
   border: 2px solid #d6d0c2;
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
   background-color: #ffffff;
   padding: 0;
+}
+
+.education, .skills {
+  margin-bottom: 1.5rem;
 }
 
 .education h3, .skills h3, .projects h3 {
@@ -103,11 +121,11 @@ button:hover {
 
 .education-card {
   display: flex;
-  gap: 10px;
   align-items: center;
   justify-content: center;
   padding: 1rem;
   margin-bottom: 0;
+  gap: 1.5rem; 
 }
 
 .icon-column {
@@ -135,16 +153,26 @@ button:hover {
 /* SKILLS */
 .skills {
   padding: 0;
+  padding-bottom: 1.5rem;
 }
-.skills-icons {
+
+/* .skills-icons {
   display: flex;
   justify-content: space-between;
+} */
+
+.skills-icons {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 0.5rem;
+  justify-items: center;
+  padding: 1rem 1rem;
 }
 
 .skills-icons, .skills p {
   padding: 1rem 1rem 0 1rem;
   margin-bottom: 0;
-  font-size: 1rem;
+  /* font-size: 1rem; */
 }
 
 .skills p {
@@ -152,10 +180,16 @@ button:hover {
   margin-bottom: 0;
 }
 
-.skills-icons img {
+/* .skills-icons img {
   width: 1.8rem;
   margin: 0 8px;
   justify-content: center;
+} */
+
+.skills-icons img {
+  max-width: 35px;
+  width: 100%;
+  height: auto;
 }
 
 /* PROJECTS */
@@ -197,7 +231,15 @@ button:hover {
   justify-content: flex-start; 
   border: 1px solid #d2d0d0;
   height: 600px;
-  gap: 0;
+  gap: 1rem;
+}
+
+.project-text-content {
+  flex-grow: 1; 
+  overflow-y: auto; 
+  min-height: 0; 
+  padding: 0 1rem; 
+  width: 100%;
 }
 
 .project-card h2 {
@@ -205,7 +247,7 @@ button:hover {
   font-size: 0.8rem;
   font-weight: normal;
   font-style: italic;
-  width: 100vh;
+  width: 100%;
 }
 
 .project-card h2, .project-card img {
@@ -221,6 +263,7 @@ button:hover {
   color: #303030;
   margin-top: 1.2rem;
   margin-bottom: 2rem;
+  padding: 0;
   
 }
 .project-card h2, .project-card h4 {
@@ -244,7 +287,8 @@ h4 {
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: auto;
+  /* margin-top: auto; */
+  margin-bottom: 1rem;
 }
 
 .thumbnail {
@@ -326,6 +370,11 @@ h4 {
 
   .profile img {
     width: 8rem;
+  }
+
+  .profile p {
+    font-size: 0.8rem;
+    padding: 1rem;
   }
 
   .project-cards {
