--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -1,13 +1,13 @@
 :root {
-  /* Primary Brand Colors */
   --color-primary: #2B2F41;
-
-  /* Secondary Accent Colors */
   --color-secondary: #83A260;
+  --color-tertiary: #d6d0c2;
 
-  /* Text Colors */
-  --color-text-white: #ffffff;
-  --color-text-black: #1f1f1f;
+  --color-tertiary-hover: #eeebe2;
+
+  /* White and Black Colors */
+  --color-white: #ffffff;
+  --color-black: #1f1f1f;
 
 }
 
